--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
 		"glob": "~4.0.5",
 		"async": "~0.9.0",
 		"nodemailer": "~1.3.0",
-		"chalk": "~1.0.0"
+		"chalk": "~1.0.0",
+		"multer": "~0.1.6"
 	},
 	"devDependencies": {
 		"supertest": "~0.14.0",
